[tool.poetry]
name = "sphinx-tutorial"
version = "0.1.0"
description = ""
authors = ["John Zhang <zz.john.cn@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flake8 = "^3.6"
pylint = "^2.2"
mypy = "^0.641.0"
yapf = "^0.25.0"
sphinx = "^1.8"
sphinx-rtd-theme = "^0.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
